# Recall

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml  release.yml
src/: bench.rs  config.rs  embedding.rs  lib.rs  main.rs  semantic.rs  types.rs  utils.rs
src/adapters/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  file_scan.rs  gemini.rs  kiro.rs  mod.rs  opencode.rs
src/db/: mod.rs  schema.rs  search.rs  store.rs
src/tui/: app.rs  event.rs  ui.rs
tests/: eval_harness.rs  regression.rs
